# zenoh-pico-espidf-v5-wrapper

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c  ping_pong.py
